
SET(SRC_LIST
avltree.cpp
hashtable.cpp
slist.cpp
)

#static library
ADD_LIBRARY(${CMAKE_PROJECT_NAME}_static STATIC ${SRC_LIST})
SET_TARGET_PROPERTIES(${CMAKE_PROJECT_NAME}_static PROPERTIES OUTPUT_NAME "${CMAKE_PROJECT_NAME}" PREFIX "lib")
SET_TARGET_PROPERTIES(${CMAKE_PROJECT_NAME}_static PROPERTIES CLEAN_DIRECT_OUTPUT 1)

#dynamic library
ADD_LIBRARY(${CMAKE_PROJECT_NAME}_dynamic SHARED ${SRC_LIST} ${CMAKE_PROJECT_NAME}.def)
SET_TARGET_PROPERTIES(${CMAKE_PROJECT_NAME}_dynamic PROPERTIES OUTPUT_NAME "${CMAKE_PROJECT_NAME}")
SET_TARGET_PROPERTIES(${CMAKE_PROJECT_NAME}_dynamic PROPERTIES CLEAN_DIRECT_OUTPUT 1)
SET_TARGET_PROPERTIES(${CMAKE_PROJECT_NAME}_dynamic PROPERTIES VERSION 0.3 SOVERSION 1)

#install
INSTALL(TARGETS ${CMAKE_PROJECT_NAME}_static ${CMAKE_PROJECT_NAME}_dynamic
	RUNTIME DESTINATION bin
	ARCHIVE DESTINATION lib
	LIBRARY DESTINATION bin)

INSTALL(FILES avltree.h DESTINATION include/struct)
INSTALL(FILES hashtable.h DESTINATION include/struct)
INSTALL(FILES slist.h DESTINATION include/struct)


